Generate NDX file

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <button class="new-bead">New bead</button>
     <ul id="bead-list"></ul>
 </div>
+<div id="file-outputs">
+    <pre id="ndx-output">NDX output</pre>
+</div>
 </body>
 
 </html> 
