Generate MAP file

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </div>
 <div id="file-outputs">
     <pre id="ndx-output">NDX output</pre>
+    <pre id="map-output">MAP output</pre>
 </div>
 </body>
 
