--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 <div id="structview">
 	<div id="viewport"></div>
 </div>
-<div id="beadlist">
+<div id="controls">
     <form>
         <label for="files" class="btn">Load molecule</label>
         <input id="mol-select" type="file" name="files" accept=".pdb,.cif,.ent,.gz,.gro"></input>
     </form>
     <button class="new-bead" disabled>New bead</button>
+</div>
+<div id="beadlist">
     <ul id="bead-list"></ul>
 </div>
 <div id="file-outputs">
