--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <input id="mol-select" type="file" name="files" accept=".pdb,.cif,.ent,.gz,.gro"></input>
     </form>
     <button class="new-bead" disabled>New bead</button>
+    <button class="toggle-aa-labels" disabled>Hide labels</button>
 </div>
 <div id="beadlist">
     <ul id="bead-list"></ul>
