Display the CG beads

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </form>
     <button class="new-bead" disabled>New bead</button>
     <button class="toggle-aa-labels" disabled>Hide labels</button>
+    <button id="toggle-cg" disabled>Toggle CG view</button>
 </div>
 <div id="beadlist">
     <ul id="bead-list"></ul>
