Write GRO files

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <div id="file-outputs">
     <pre id="ndx-output">NDX output</pre>
     <pre id="map-output">MAP output</pre>
+    <pre id="gro-output">GRO output</pre>
 </div>
 </body>
 
