Let the user download the output files

--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
     <ul id="bead-list"></ul>
 </div>
 <div id="file-outputs">
+    <button id='dl-ndx' class='dl'>Get the NDX file</button>
     <pre id="ndx-output">NDX output</pre>
+    <button id='dl-map' class='dl'>Get the MAP file</button>
     <pre id="map-output">MAP output</pre>
+    <button id='dl-gro' class='dl'>Get the GRO file</button>
     <pre id="gro-output">GRO output</pre>
 </div>
 </body>
