Please webstorm's linter

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
- <!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>CG Builder</title>
-<script src="https://cdn.rawgit.com/arose/ngl/v2.0.0-dev.31/dist/ngl.js"></script>
-<script src="scripts/main.js"></script>
-<link rel="stylesheet" href="styles/main.css" /> 
+    <meta charset="UTF-8">
+    <title>CG Builder</title>
+    <script src="https://cdn.rawgit.com/arose/ngl/v2.0.0-dev.31/dist/ngl.js"></script>
+    <script src="scripts/main.js"></script>
+    <link rel="stylesheet" href="styles/main.css" />
 </head>
 
 <body>
@@ -15,7 +15,7 @@
 <div id="controls">
     <form>
         <label for="files" class="btn">Load molecule</label>
-        <input id="mol-select" type="file" name="files" accept=".pdb,.cif,.ent,.gz,.gro"></input>
+        <input id="mol-select" type="file" name="files" accept=".pdb,.cif,.ent,.gz,.gro"/>
     </form>
     <button class="new-bead" disabled>New bead</button>
     <button class="toggle-aa-labels" disabled>Hide labels</button>
